--- a/IMDB_EfDbCons/IMDB_EfDbCons.csproj
+++ b/IMDB_EfDbCons/IMDB_EfDbCons.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="31.0.2" />
+    <PackageReference Include="EFCore.BulkExtensions" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.2">
