--- a/IMDB_EfDbCons/IMDbConsole.csproj
+++ b/IMDB_EfDbCons/IMDbConsole.csproj
@@ -19,4 +19,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="IMDbLib">
+      <HintPath>..\..\IMDbLib\IMDbLib\bin\Debug\net8.0\IMDbLib.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
